# ATS-zlog-CMake

./: README.md
ATS_ZLOG/: .gitignore  CMakeLists.txt
ATS_ZLOG/CATS/: zlog.cats
ATS_ZLOG/DATS/: zlog.dats
ATS_ZLOG/SATS/: zlog.sats
application/: Makefile  add_lib.dats  test01.dats
application/SATS/: add_lib.sats
test/: CMakeLists.txt
zlog/: CMakeLists.txt  Makefile  module.mk
zlog/CATS/: zlog.cats
zlog/DATS/: zlog.dats
zlog/MISC/try_zlog/: Makefile  module.mk  test01.c  zlog.conf
zlog/SATS/: zlog.sats
zlog/TEST/: Makefile  module.mk  test_zlog.dats
