CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (ATS_ZLOG C)

#FIND_PACKAGE (Threads)
FIND_PACKAGE (ATS REQUIRED)
FIND_PACKAGE (ZLOG REQUIRED)
IF (NOT ZLOG_FOUND)
	MESSAGE (FATAL_ERROR "ZLOG Not Found!")
ENDIF ()

INCLUDE_DIRECTORIES (${ZLOG_INCLUDE_DIRS})
LINK_DIRECTORIES (${ZLOG_LIBRARIES})


INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/CATS)
ATS_INCLUDE (SATS)

ATS_COMPILE (ZLOG_ATS_SRC SATS/zlog.sats DATS/zlog.dats)

ADD_LIBRARY (ats_zlog ${ZLOG_ATS_SRC})

SET (CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_LIST_DIR}/INSTALL)
INSTALL (TARGETS ats_zlog DESTINATION lib)

ATS_EXPORT (ATS_ZLOG
	INCLUDE_DIRS_C CATS aa
	INCLUDE_DIRS_ATS SATS
	LINK_DIRS INSTALL/lib)



