CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (test C)

FIND_PACKAGE (ATS REQUIRED)
FIND_PACKAGE (Threads)
FIND_PACKAGE (ZLOG REQUIRED)
IF (NOT ZLOG_FOUND)
	MESSAGE (FATAL_ERROR "ZLOG Not Found!")
ENDIF ()
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR "ATS not found!")
ENDIF ()

INCLUDE_DIRECTORIES (${ZLOG_INCLUDE_DIRS})
LINK_DIRECTORIES (${ZLOG_LIBRARIES})


SET (ATS_REPO /home/steinwaywhw/GitHub/ATS-zlog-CMake)
ATS_IMPORT (ATS_ZLOG)

ATS_COMPILE (TEST_SRC test.dats)
ADD_EXECUTABLE (test ${TEST_SRC})

TARGET_LINK_LIBRARIES (test ats_zlog zlog ${CMAKE_THREAD_LIBS_INIT})