CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (ATS_ZLOG C)

FIND_PACKAGE (Threads)
FIND_PACKAGE (ATS REQUIRED)
FIND_PACKAGE (ZLOG REQUIRED)
IF (NOT ZLOG_FOUND)
	MESSAGE (FATAL_ERROR "ZLOG Not Found!")
ENDIF ()



INCLUDE_DIRECTORIES (${ZLOG_INCLUDE_DIRS})
LINK_DIRECTORIES (${ZLOG_LIBRARIES})



INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/CATS)

ATS_INCLUDE (${PROJECT_SOURCE_DIR}/SATS)


ATS_COMPILE (ZLOG_ATS_SRC SATS/zlog.sats DATS/zlog.dats)
ATS_COMPILE (TEST_ATS_SRC TEST/test_zlog.dats)

ADD_LIBRARY (ats_zlog ${ZLOG_ATS_SRC})
ADD_EXECUTABLE (test ${TEST_ATS_SRC})



TARGET_LINK_LIBRARIES (test ats_zlog zlog ${CMAKE_THREAD_LIBS_INIT})
